[gd_scene load_steps=2 format=3 uid="uid://dryac8f57oat6"]

[ext_resource type="Script" path="res://Pause Menu/Pause_Menu.gd" id="1_kpkq0"]

[node name="Pause Menu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(5, 5)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kpkq0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.341176, 0.341176, 0.635294)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 439.0
offset_top = -142.0
offset_right = 559.0
offset_bottom = -11.0
grow_vertical = 2
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_direction = 1
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1
uppercase = true

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Save Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Save & Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Save Quit" to="." method="_on_save_quit_pressed"]
